Include colab link

--- a/notebooks/Process_AUT_GT.ipynb
+++ b/notebooks/Process_AUT_GT.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/massivetexts/llm_aut_study/blob/main/notebooks/Process_AUT_GT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "eXqu-c24fsZs"
       },
       "source": [
@@ -4597,7 +4607,8 @@
       ],
       "provenance": [],
       "mount_file_id": "1bZ0PDifSqhWhAUwuLK4BCt0Mke50ww-Q",
-      "authorship_tag": "ABX9TyP/4DeAWbHGaXxKUYl0C2Du"
+      "authorship_tag": "ABX9TyP/4DeAWbHGaXxKUYl0C2Du",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
